--- a/app/views/shared/_header_menu.html.erb
+++ b/app/views/shared/_header_menu.html.erb
@@ -57,6 +57,7 @@
       <div class="block px-4 py-2 text-sm text-gray-700 bg-gray-100">Welcome, <%= current_customer.email %>!</div>
       <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
       <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
+      <%= link_to "Order History", orders_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" %>
       <%= link_to "Sign Out", destroy_customer_session_path, data: { turbo_method: :delete }, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" %>
     <% else %>
       <%= link_to 'Sign Up', new_customer_registration_path, class: "block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" %>
